jwt tokens generation and refreshing done.
